# rest-dj

./: pyproject.toml
django_api_tasks/: db.sqlite3  manage.py
django_api_tasks/api/: models.py  urls.py  views.py
django_api_tasks/api/migrations/: 0001_initial.py
django_api_tasks/django_api_tasks/: asgi.py  settings.py  urls.py  wsgi.py
django_api_tasks/frontend/: urls.py
django_api_tasks/frontend/templates/frontend/: list.html
