[tool.poetry]
name = "rest-dj"
version = "0.1.0"
description = "django rest api practice"
authors = ["bkitw"]
readme = "README.md"
packages = [{include = "rest_dj"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
Django = "^4.2.1"
djangorestframework = "^3.14.0"
sqlparser = "^0.0.9"
pytz = "^2023.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
